src/objects/BatchUploadable__c.object
<CustomObject>
    <fields>
        <fullName>AccountName__c</fullName>
        <label>AccountName</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>BatchUploadable</relationshipLabel>
        <relationshipName>BatchUploadable</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Age_Employees__c</fullName>
        <label>Age : Employees</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Bank_Account_Number_Salary_Detail__c</fullName>
        <label>Bank Account Number : Salary Detail</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bank_Details_Salary_Details__c</fullName>
        <label>Bank Details : Salary Details</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Basic_Salary_Detail__c</fullName>
        <label>Basic : Salary Detail</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Birthdate_Contact__c</fullName>
        <label>Birthdate : Contact</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>City_Employees__c</fullName>
        <label>City :  Employees</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Close_Date_Opportunity__c</fullName>
        <label>Close Date : Opportunity</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>BatchUploadable</relationshipLabel>
        <relationshipName>BatchUploadable</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Credited_To_Salary_Details__c</fullName>
        <label>Credited To : Salary Details</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Date_of_Birth_Employees__c</fullName>
        <label>Date of Birth : Employees</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_of_Joining_EMPLOYEE__c</fullName>
        <label>Date of Joining : EMPLOYEE</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Description_Contact__c</fullName>
        <label>Description: Contact</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Description_Opportunity__c</fullName>
        <label>Description : Opportunity</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Email_Contact__c</fullName>
        <label>Email : Contact</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Employee__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Employee</label>
        <referenceTo>EMPLOYEE__c</referenceTo>
        <relationshipLabel>BatchUploadable</relationshipLabel>
        <relationshipName>BatchUploadable</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Error_Description_Batchuploadable__c</fullName>
        <label>Error Description : Batchuploadable</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Fax_of_Account__c</fullName>
        <label>Fax of Account</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>First_Name_Contact__c</fullName>
        <label>First Name : Contact</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>First_Name_Employees__c</fullName>
        <label>First Name : Employees</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HRA_Salary_Detail__c</fullName>
        <label>HRA : Salary Detail</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Last_Name_Contact__c</fullName>
        <label>Last Name :Contact</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Last_Name_Employees__c</fullName>
        <label>Last Name : Employees</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mobile_phone_Contact__c</fullName>
        <label>Mobile phone : Contact</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Mode_of_payment_Salary_Detail__c</fullName>
        <label>Mode of payment : Salary Detail</label>
        <picklist>
            <picklistValues>
                <fullName>RTGS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NEFT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cheque</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cash</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Name_Opportunity__c</fullName>
        <label>Name : Opportunity</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Name_Salary_Details__c</fullName>
        <label>Name : Salary Details</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>BatchUploadable</relationshipLabel>
        <relationshipName>BatchUploadable</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PF_Deduction_Salary_Details__c</fullName>
        <label>PF Deduction :  Salary Details</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Phone_of_Account__c</fullName>
        <label>Phone of Account</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Salary_Credit_Date_Salary_Details__c</fullName>
        <label>Salary Credit Date : Salary Details</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Salary_Details__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Salary Details</label>
        <referenceTo>Sa__c</referenceTo>
        <relationshipLabel>BatchUploadable</relationshipLabel>
        <relationshipName>BatchUploadable</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Special_Allowance_Salary_Details__c</fullName>
        <label>Special Allowance : Salary Details</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Stage_Opportunity__c</fullName>
        <label>Stage : Opportunity</label>
        <picklist>
            <picklistValues>
                <fullName>Prospecting</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Qualification</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Needs Analysis</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Value Proposition</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Id. Decision Makers</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Perception Analysis</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Proposal/Price Quote</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Negotiation/Review</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Closed Won</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Closed Lost</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Status_batchUploadable__c</fullName>
        <label>Status : batchUploadable</label>
        <picklist>
            <picklistValues>
                <fullName>New</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Processing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Completed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Error</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type : Account</label>
        <picklist>
            <picklistValues>
                <fullName>Prospect</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Customer - Direct</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Customer - Channel</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Channel Partner / Reseller</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Installation Partner</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Technology Partner</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Type_opportunity__c</fullName>
        <label>Type : opportunity</label>
        <picklist>
            <picklistValues>
                <fullName>Existing Customer - Upgrade</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Existing Customer - Replacement</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Existing Customer - Downgrade</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>New Customer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>New Contract</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Website_of_Account__c</fullName>
        <label>Website of Account</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Zip_Code_EMPLOYEE__c</fullName>
        <label>Zip Code : EMPLOYEE</label>
        <length>6</length>
        <type>Text</type>
    </fields>
    <label>BatchUploadable</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>BatchUploadable Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>BatchUploadable</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>